Fix layout bug and improve UI for permission tool, add filterDropDown JS

--- a/allianceauth/static/css/auth-base.css
+++ b/allianceauth/static/css/auth-base.css
@@ -43,6 +43,12 @@ ul.list-group.list-group-horizontal > li.list-group-item {
     justify-content: center;
 }
 
+/* group headers within a table */
+.tr-group {
+    font-weight: bold;
+    background-color: #e6e6e6 !important;
+}
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     
